# em-radar

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_ASSIGNMENT_AGREEMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/alembic/versions/: 0001_add_signal_pack_history.py
apps/api/src/em_radar_api/: db.py  main.py  signal_configs.py  source_connections.py  tables.py
apps/api/src/em_radar_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/em_radar_api/models/: signal_pack_history.py
apps/api/src/em_radar_api/repositories/: __init__.py  canonical.py  reports.py  signal_configs.py  signal_pack_history.py  source_connections.py
apps/api/src/em_radar_api/routers/: health.py  reports.py
apps/api/tests/: conftest.py  test_db.py  test_health.py  test_migrations.py  test_normalized_persistence.py  test_report_persistence.py  test_reports_run.py  test_signal_configs.py  test_signal_pack_history.py  test_source_connections.py
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  FindingsPage.tsx  index.css  main.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/web/src/lib/: reports.ts
deploy/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: 01-vision-and-scope.md  02-requirements.md  03-architecture-overview.md  04-tech-stack.md  05-data-model.md  06-signal-yaml-spec.md  07-connector-interface.md  08-mvp-roadmap.md  09-functional-flows.md  10-er-diagram.md  project-idea.md
docs/ADRs/: 0001-backend-framework.md  0002-default-database.md  0003-frontend-framework.md  0004-ui-component-library.md  0005-python-package-manager.md  0006-token-storage.md
em_radar_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
migrations/: env.py
migrations/versions/: 3e5f0c1a8b2d_add_signal_pack_history.py  4cff032f32e2_baseline_canonical_and_evaluation_tables.py  5aa998bb48f2_add_source_connection.py  d45b9b5ec73a_add_signal_config.py
