[project]
name = "em-radar-core"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "packages/core/src"}

[tool.setuptools.packages.find]
where = ["packages/core/src"]

[tool.ruff]
line-length = 100
target-version = "py312"
