[project]
name = "em-radar-core"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel",
]

[project.entry-points."em_radar.connectors"]
demo = "em_radar_connector_demo:DemoConnector"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "fastapi",
    "httpx",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["packages/core/src", "packages/connectors/demo/src"]

[tool.pytest.ini_options]
pythonpath = ["apps/api/src"]

[tool.ruff]
line-length = 100
target-version = "py312"
