[project]
name = "em-radar-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "em-radar-core",
    "fastapi",
    "uvicorn[standard]",
]

[tool.uv.sources]
em-radar-core = { path = "../..", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"
