[project]
name = "em-radar-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "em-radar-core",
    "fastapi",
    "sqlmodel",
    "uvicorn[standard]",
]

[tool.uv.sources]
em-radar-core = { path = "../..", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"
